# neuro-theater-eeg

./: .gitignore  MUSE_ALL_mDIREC.gfi  README.md  nickname.json  pyproject.toml  requirements.txt  run_env_neurtheater.sh
examples/: Musefusioncube.py  Musefusioncube_live.py  convert_xdf.py  lsl_stream_picker.py  xdf_explorer_demo.py
examples/exploration/: __init__.py
goofi-files/: 1D1A_MUSEDIRECT.gfi  1E58_MUSEDIRECT.gfi  1FD6_MUSEDIRECT.gfi  2262_MUSEDIRECT.gfi  2265_MUSEDIRECT.gfi  22FC_MUSEDIRECT.gfi  2615_MUSEDIRECT.gfi  72_ENOBIO.gfi  ENOBIO.gfi  MUSEDIR_ALL.gfi  MUSELSL_ALL.gfi  MUSE_1CD4.gfi  MUSE_22FC.gfi  MUSE_25EA.gfi  MUSE_2615.gfi  MUSE_ALL.gfi  MUSE_ALL_MUSRLSL.gfi  NormalizationTest_MuseDirect.gfi  collectMuses.gfi  writing_muse_lsl_22FC.gfi
neurotheater/: __init__.py  xdf_explorer.py
osc-io/: osc_proxy_failover.py  osc_recorder.py  osc_replay.py  osc_replay_plot.py  proxy_config.json
scripts/: merge_muse_run_csvs.py  muse_stream_resilient.sh  patch_muselsl_asyncio.sh
