# @author: @franckPrts

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neurotheater"
version = "0.1.0"
description = "NeuroTheater utilities for XDF / LSL recordings"
dependencies = [
    "pyxdf>=1.16.0",
    "pydub>=0.25.0",
]
requires-python = ">=3.10"

[project.optional-dependencies]
pyplot = [
    "pylsl>=1.16.0",
    "matplotlib>=3.7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["neurotheater*"]
